--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <img src="./images/logo.svg" alt="">
-    <img src="./images/icon-hamburger.svg" alt="">
+    <img class='logo' src="./images/logo.svg" alt="">
+    <img class='hamburger' src="./images/icon-hamburger.svg" alt="">
     <div class="header__modal">
       <ul class="header__modalList">
         <li class="header__modalItem">About</li>
@@ -20,67 +20,67 @@
     </div>
   </header>
   <main>
-    <div>
-      <img src="./images/logo-mastercraft.svg" alt="">
-      <h2>Mastercraft Bamboo Monitor Riser</h2>
-      <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
-      <button>Back this project</button>
-      <button><img src="./images/icon-bookmark.svg" alt=""></button>
+    <div class='floatingMain'>
+      <img class='floatingMain__logo' src="./images/logo-mastercraft.svg" alt="">
+      <h2 class='floatingMain__title'>Mastercraft Bamboo Monitor Riser</h2>
+      <p class='floatingMain__description'>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+      <button class='button button--back'>Back this project</button>
+      <img class='floatingMain__book' src="./images/icon-bookmark.svg" alt="">
     </div>
 
-    <div>
-      <div>
-        <h3>$89,914</h3>
-        <p>of $100,000 backed</p>  
+    <div class='progress'>
+      <div class='progress__section'>
+        <h3 class='progress__money'>$89,914</h3>
+        <p class='progress__label'>of $100,000 backed</p>  
       </div>
-      <div>
-        <h3>5,007</h3>
-        <p>total backers</p>  
+      <div class='progress__section'>
+        <h3 class='progress__people'>5,007</h3>
+        <p class='progress__label'>total backers</p>  
       </div>
-      <div>
-        <h3>56</h3>
-        <p>days left</p>  
+      <div class='progress__section'>
+        <h3 class='progress__days'>56</h3>
+        <p class='progress__label'>days left</p>  
       </div>
     </div>
 
-    <div>
-      <h2>About this project</h2>
-      <p>
+    <div class='about'>
+      <h2 class='about__title'>About this project</h2>
+      <p class='about__description'>
         The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
       </p>
-      <p>
+      <p class='about__description'>
         Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB sticks to be stored under the stand.
       </p>
-      <div>
-        <h3>Bamboo Stand</h3>
-        <h4>Pledge $25 or more</h4>
-        <p>
+      <div class='pledgeCard'>
+        <h3 class='pledgeCard__title'>Bamboo Stand</h3>
+        <h4 class='pledgeCard__subtitle'>Pledge $25 or more</h4>
+        <p class='pledgeCard__description'>
           You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.
         </p>
-        <p><span>101</span> left</p>
-        <button>Select Reward</button>
+        <p class='pledgeCard__stock'><span class='pledgeCard__number'>101</span> left</p>
+        <button class='button button--select'>Select Reward</button>
       </div>
-      <div>
-        <h3>Black Edition Stand</h3>
-        <h4>Pledge $75 or more</h4>
-        <p>
+      <div class='pledgeCard'>
+        <h3 class='pledgeCard__title'>Black Edition Stand</h3>
+        <h4 class='pledgeCard__subtitle'>Pledge $75 or more</h4>
+        <p class='pledgeCard__description'>
           You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer  member list. Shipping is included.
         </p>
-        <p><span>64</span> left</p>
-        <button>Select Reward</button>
+        <p class='pledgeCard__stock'><span class='pledgeCard__number'>64</span> left</p>
+        <button class='button button--select'>Select Reward</button>
       </div>
-      <div>
-        <h3>Mahogany Special Edition</h3>
-        <h4>Pledge $200 or more</h4>
-        <p>
+      <div class='pledgeCard'>
+        <h3 class='pledgeCard__title'>Mahogany Special Edition</h3>
+        <h4 class='pledgeCard__subtitle'>Pledge $200 or more</h4>
+        <p class='pledgeCard__description'>
           You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added   to our Backer member list. Shipping is included.
         </p>
-        <p><span>0</span> left</p>
-        <button>Out of Stock</button>
+        <p class='pledgeCard__stock'><span class='pledgeCard__number'>0</span> left</p>
+        <button class='button button--select'>Out of Stock</button>
       </div>
     </div>
   </main>
-  <section>
+  <section class='backModal'>
     <div>
       <h2>Back this project</h2>
       <button><img src="./images/icon-close-modal" alt=""></button>
@@ -178,7 +178,7 @@
     </ul>
   </section>
 
-  <section>
+  <section class='successModal'>
     <div>
       <img src="./images/icon-check.svg" alt="">
       <h3>Thanks for your support!</h3>
